# glpi_dashboard_cau

./: .bashrc  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .gitmessage  .hintrc  .mergify.yml  .mise.toml  .pre-commit-config.yaml  .sourcery.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  WORKFLOWS.md  bug_prompt.md  cSpell.json  clean.diff  codex.patch  config.py  dash_layout.py  dashboard_app.py  data_pipeline.py  database.py  diagnose_codex.py  docker-compose-dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  file_map.json  frontend  glpi_api.py  glpi_api_client.py  glpi_criteria_builder.py  glpi_dashboard_plan.md  (+42 more)
.devcontainer/: setup.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: backend-ci.yml  checklist.yml  ci.yml  ci_mock.yml  cicd.yml  codex-review.yml  contract-testing.yml  devops.yml  lock_dependencies.yml  performance.yml  quality-audit.yml
.specstory/: .what-is-this.md
.specstory/history/: 2025-07-08_01-00Z-fix-jsx-element-implicitly-has-type-any-because.md
app/api/: __init__.py  metrics.py
assets/: styles.css
backend/: Dockerfile
cli/: tickets_groups.py
data/: mock_tickets.json
db/: Dockerfile
deprecated/: providers.py
docker/backend/: Dockerfile
docker/db-init/: 00-extensions.sql  01-create-roles.sql  01-init-db.sh  01-init.sql  init-user-db.sh
docker/postgres/: Dockerfile
docker/redis/: Dockerfile
docs/: ADD_NEW_FIELD.md  AGENTS.md  ARCHITECTURE_backup.md  CHANGELOG.md  CONTRIBUTING.md  DB_SETUP.md  DEV_SETUP.md  DOCKER_COMPOSE_ADJUSTMENTS.md  ENVIRONMENT.md  GRAFANA.md  PROMPT_BUILDER.md  REDIS.md  REFACTOR_LOG.md  Relatorio_Executivo_ROI.md  WORKFLOWS.md  api.md  architecture.md  asyncio_scenarios.md  asyncio_validation_checks.md  codex_setup.md  copilot_integration.md  cqrs_overview.md  dev_performance_guide.md  developer_usage.md  error_map.md  first_use_mysql.md  fix_no_tickets.md  frontend_architecture.md  frontend_charts.md  glpi_dashboard_plan.md  glpi_tokens_guide.md  governanca_tecnica_prompt.md  index.md  init_session_api.md  install_quickstart.md  knowledge_base_errors.md  langgraph_workflow.md  migration_to_microservices.md  monolith_vs_microservices.md  naming_conventions_langgraph.md  (+20 more)
docs/adr/: 0001-frontend-stack.md  0002-dashboard-architecture.md  0003-api-versioning.md  0004-cache-strategy.md  0005-observability.md  0006-esm-adoption.md  0007-refined-project-structure.md  template.md
docs/cookbook/: ci-setup.md  dashboard-components.md  data-pipeline.md  glpi-session.md
etl/: tickets_groups.py
examples/: README.md  demo_resilient_client.py  example_api.py  prompt_tester_langgraph.py  resilient_client.py  test_resilient_client.py
examples/patterns/: song_serializer.py  sort_strategy.py
frontend/: .dockerignore  .env.example  .eslintrc.json  .npmrc  .prettierrc  Dockerfile  README.md  eslint.config.mjs  index.html  jest.config.ts  jest.integration.config.ts  jest.integration.setup.ts  jest.integration.teardown.ts  jest.setup.ts  lighthouseci.config.js  next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/scripts/: analyzeProfile.js  check-env.js  regenerate-lockfile.sh
frontend/shared/: loading.tsx
frontend/src/: App.tsx  global.d.ts  index.css  main.tsx  reportWebVitals.ts
frontend/tests/: basic.spec.ts  profile.spec.tsx
githooks/: pre-commit  pre-commit.sh  pre-push
glpi_dashboard_novo/: docker-compose.new.yml  requirements.txt
labs/: README.md
labs/prototypes/: README.md
mock/: dev_schema_example.json  sample_data.json
monitoring/: prometheus.yml
new_project/: .env.example  Dockerfile  README.md  docker-compose.yml
new_project/backend/: glpi_session.py  main.py  metrics.py  normalization.py  settings.py
new_project/frontend/: .env.example  Dockerfile  package-lock.json
resources/: README.md  grafana_dashboard.json
resources/data/: README.md  raw_tickets_sample.json
resources/db/: schema.sql
resources/monitoring/: README.md  grafana_dashboard.json  (+1 more)
rules/: config.yml  no-db-in-frontend.yml
scripts/: adr-new  adr-new.js  asyncio_decision_cli.py  auto_mover.py  check-env.js  check_merge_conflicts.py  check_snyk_access.sh  create_app_user.sh  demo_resilient_client.py  download_wheels.py  download_wheels.sh  error_logger.py  fetch_tickets.py  filters.py  gen_mock_data.py  generate_arch_docs.py  generate_bug_prompt.py  hash_data.py  init_db.py  install_dev_extras.sh  lint-configs.sh  lint-docker.sh  log_exec.py  profile_dash.py  refactor_move.py  regenerate-lockfile.sh  run_py_codemod.sh  run_ts_codemod.sh  save_docker_images.sh  setup_github_access.sh  update-imports.js  validate_asyncio.py  validate_credentials.py  validate_credentials_script.py  validate_credentials_test.py
src/: glpi_sdk.py  langgraph_workflow.py  main.py  prompt_config.py
test/: test_dash_layout.py  test_tickets_groups.py
tests/: README.md  conftest.py  helpers.py  test_aggregated_metrics.py  test_auth.py  test_backend_config.py  test_batch_fetch.py  test_cache_initialization.py  test_circuit_breaker.py  test_clean_ticket_dto.py  test_convert_ticket.py  test_criteria_builder_alias.py  test_dash_offline.py  test_dashboard_components.py  test_dashboard_layout.py  test_data_pipeline.py  test_database_async.py  test_dishka_container.py  test_document_read_service.py  test_document_service.py  test_domain_imports.py  test_dto.py  test_enrichment_alias.py  test_error_logger.py  test_event_consumer.py  test_fetch_tickets.py  test_filters.py  test_gen_mock_data.py  test_glpi_api.py  test_glpi_api_client.py  test_glpi_api_client_v2.py  test_glpi_async_client.py  test_glpi_auth.py  test_glpi_client.py  test_glpi_client_sync.py  test_glpi_criteria_builder.py  test_glpi_enrichment.py  test_glpi_errors.py  test_glpi_refresh_retry.py  test_glpi_rest_client.py  (+43 more)
wheels/: README.md
(+525 files in other folders)
